<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dip"
    android:background="@drawable/dialog_loading" >
    
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_17sp"
        android:textColor="@color/gray_666666"
        android:text="@string/action_settings" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_below="@id/tv_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:background="@drawable/bg_btn_dialog_cancel_selector"
            android:textColor="@color/white"
            android:text="@string/dialog_cancel" />
        
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:layout_marginLeft="50dip"
            android:background="@drawable/bg_btn_dialog_ok_selector"
            android:textColor="@color/white"
            android:text="@string/dialog_ok" />
        
    </LinearLayout>

</RelativeLayout>
