<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:padding="10dip" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_arrowhead" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_register"
            android:textColor="@color/text_login"
            android:textSize="20dip" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/login_box"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
			<TextView 
			    android:layout_marginLeft="10dp"
			    android:id="@+id/tv_country"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="18sp"
			    android:layout_centerVertical="true"
			    android:text="@string/register_country"
			    />
            <EditText
                android:layout_toRightOf="@+id/tv_country"
                android:id="@+id/et_register_mobile_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_input_mobile_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:nextFocusDown="@+id/et_input_captcha"
                android:paddingBottom="15dip"
                android:paddingLeft="20dip"
                android:paddingTop="15dip"
                android:singleLine="true"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />
        </RelativeLayout>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_line_gray" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_input_captcha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_input_captcha"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:nextFocusDown="@+id/et_input_login_password"
                android:paddingBottom="15dip"
                android:paddingLeft="20dip"
                android:paddingTop="15dip"
                android:singleLine="true"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_request_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_blue"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:text="@string/get_register"
                android:textColor="@color/white" />
        </RelativeLayout>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_line_gray" />

        <EditText
            android:id="@+id/et_input_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/register_input_login_password"
            android:inputType="text"
            android:nextFocusDown="@+id/btn_register"
            android:paddingBottom="15dip"
            android:paddingLeft="20dip"
            android:paddingTop="15dip"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/text_hint"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_login_selector"
        android:paddingBottom="10dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:paddingTop="10dp"
        android:text="@string/text_register"
        android:textColor="@color/text_login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_user_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/register_user_protocol"
        android:textColor="@color/text_hint"
        android:textSize="14sp" />

</RelativeLayout>