<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:padding="10dip" >
        
        <LinearLayout
	        android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/back_arrowhead" />
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/upload_photo_select_photo"
            android:textColor="@color/text_login"
            android:textSize="20dip" />
        
        <Button
            android:id="@+id/btn_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/upload_photo_release"
            android:textColor="@color/text_login"
            android:textSize="20dip" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical" >
    
	    <EditText
	        android:id="@+id/et_photo_description"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top"
	        android:hint="@string/upload_photo_text_description"
	        android:minLines="5" />
	    
	    <GridView
	        android:id="@+id/gv_batch_upload_photo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:horizontalSpacing="6dip"
	        android:verticalSpacing="6dip"
	        android:numColumns="3"
	        android:visibility="gone" />
    
    </LinearLayout>

</LinearLayout>