<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_new"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dip"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:background="@drawable/login_box"
        android:orientation="vertical"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip" >

        <RelativeLayout
            android:id="@+id/rl_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/et_mobile_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/login_mobile_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:nextFocusDown="@+id/et_password"
                android:paddingBottom="15dip"
                android:paddingLeft="20dip"
                android:paddingTop="15dip"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_line_gray" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="text"
                android:nextFocusDown="@+id/btn_login"
                android:paddingBottom="15dip"
                android:paddingLeft="20dip"
                android:paddingTop="15dip"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_lost_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="20dip"
                android:text="@string/login_lost_password"
                android:textColor="@color/text_login"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <Button
            android:layout_weight="5"
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_selector_new"
            android:text="@string/login_login"
            android:textColor="@color/text_login"
            android:textSize="20sp" />
		<View 
		    android:layout_weight="1"
		    android:layout_width="0dip"
		    android:layout_height="1dp"
		    />
        <Button
            android:layout_weight="5"
            android:id="@+id/btn_login_register"
            android:layout_width="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_selector"
            android:text="@string/text_register"
            android:textColor="@color/text_login"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>